ShortVideo support + captcha fix + gradle 7.4 + jitpack.